[gd_scene load_steps=66 format=3 uid="uid://b1jubpkv3ltgc"]

[ext_resource type="Texture2D" uid="uid://b3aq8bdgswplb" path="res://Character/valla/valla_attack_nw/8.png" id="1"]
[ext_resource type="Texture2D" uid="uid://cfs4nnbpllwbb" path="res://Character/valla/valla_attack_nw/1.png" id="2"]
[ext_resource type="Texture2D" uid="uid://cmpa1hunynbiu" path="res://Character/valla/valla_attack_nw/5.png" id="3"]
[ext_resource type="Texture2D" uid="uid://b5f2hpvhqj4u6" path="res://Character/valla/valla_attack_nw/3.png" id="4"]
[ext_resource type="Texture2D" uid="uid://bm6xu4n43w64v" path="res://Character/valla/valla_attack_nw/4.png" id="5"]
[ext_resource type="Texture2D" uid="uid://n5861fbeyxp5" path="res://Character/valla/valla_attack_nw/2.png" id="6"]
[ext_resource type="Texture2D" uid="uid://bweyuy1e5lmqj" path="res://Character/valla/valla_attack_nw/7.png" id="7"]
[ext_resource type="Texture2D" uid="uid://dhqkq67gb1xqh" path="res://Character/valla/valla_attack_nw/6.png" id="8"]
[ext_resource type="Texture2D" uid="uid://cb2367n0ev36f" path="res://Character/valla/valla_idle_s/5.png" id="9"]
[ext_resource type="Script" path="res://Scripts/Player.gd" id="10"]
[ext_resource type="PackedScene" path="res://Scenes/Objects/LiveOverlay.tscn" id="11"]
[ext_resource type="Texture2D" uid="uid://c4t5vab5malnw" path="res://Character/valla/valla_attack_s/2.png" id="21"]
[ext_resource type="Texture2D" uid="uid://cyf1txjffxirt" path="res://Character/valla/valla_attack_s/3.png" id="22"]
[ext_resource type="Texture2D" uid="uid://bouwlfe05q2gp" path="res://Character/valla/valla_attack_s/4.png" id="23"]
[ext_resource type="Texture2D" uid="uid://dgeax2lpd1aah" path="res://Character/valla/valla_attack_s/1.png" id="24"]
[ext_resource type="Texture2D" uid="uid://c50p8e8mnco0v" path="res://Character/valla/valla_go_nw/8.png" id="25"]
[ext_resource type="Texture2D" uid="uid://cbtapicnmh62p" path="res://Character/valla/valla_go_s/3.png" id="26"]
[ext_resource type="Texture2D" uid="uid://wlv7tyls71mp" path="res://Character/valla/valla_go_s/6.png" id="32"]
[ext_resource type="Texture2D" uid="uid://bk6m7colv7stv" path="res://Character/valla/valla_go_s/7.png" id="34"]
[ext_resource type="Texture2D" uid="uid://fuuh0olj7xfo" path="res://Character/valla/valla_go_s/4.png" id="37"]
[ext_resource type="Texture2D" uid="uid://byxxg658gvp5e" path="res://Character/valla/valla_go_s/1.png" id="42"]
[ext_resource type="Texture2D" uid="uid://ydgnh0enn7il" path="res://Character/valla/valla_go_s/5.png" id="45"]
[ext_resource type="Texture2D" uid="uid://capkb4fgwj1oo" path="res://Character/valla/valla_go_nw/3.png" id="46"]
[ext_resource type="Texture2D" uid="uid://ukey5tm7k36a" path="res://Character/valla/valla_go_nw/7.png" id="48"]
[ext_resource type="Texture2D" uid="uid://bte7fa0rp51gl" path="res://Character/valla/valla_attack_s/8.png" id="53"]
[ext_resource type="Texture2D" uid="uid://b7wjbcswc5lss" path="res://Character/valla/valla_attack_s/7.png" id="54"]
[ext_resource type="Texture2D" uid="uid://cc1chk0r7n5hr" path="res://Character/valla/valla_go_nw/4.png" id="58"]
[ext_resource type="Texture2D" uid="uid://c7tnkly3ugkgn" path="res://Character/valla/valla_go_s/2.png" id="63"]
[ext_resource type="Texture2D" uid="uid://rdj8xtjwutoh" path="res://Character/valla/valla_attack_s/6.png" id="64"]
[ext_resource type="Texture2D" uid="uid://d33k3tb1qy53r" path="res://Character/valla/valla_attack_s/5.png" id="65"]
[ext_resource type="Texture2D" uid="uid://prno78ubq70k" path="res://Character/valla/valla_go_nw/2.png" id="71"]
[ext_resource type="Texture2D" uid="uid://bhrl48untm578" path="res://Character/valla/valla_go_nw/6.png" id="79"]
[ext_resource type="Texture2D" uid="uid://cn6mpk44c4ucx" path="res://Character/valla/valla_go_nw/5.png" id="81"]
[ext_resource type="Texture2D" uid="uid://but516dn1tda3" path="res://Character/valla/valla_go_s/8.png" id="82"]
[ext_resource type="Texture2D" uid="uid://b0l7aplett8x4" path="res://Character/valla/valla_go_nw/1.png" id="88"]
[ext_resource type="Texture2D" uid="uid://cmld6depieq51" path="res://Character/valla/valla_idle_nw/4.png" id="89"]
[ext_resource type="Texture2D" uid="uid://dhs1nqn127xuf" path="res://Character/valla/valla_idle_nw/5.png" id="90"]
[ext_resource type="Texture2D" uid="uid://dtmq0tpnx2vdk" path="res://Character/valla/valla_idle_nw/1.png" id="95"]
[ext_resource type="Texture2D" uid="uid://bs20ucaectrdm" path="res://Character/valla/valla_idle_nw/2.png" id="96"]
[ext_resource type="Texture2D" uid="uid://djp25h42e1ugh" path="res://Character/valla/valla_idle_nw/3.png" id="97"]
[ext_resource type="Texture2D" uid="uid://bi3aqr2eslrye" path="res://Character/valla/valla_idle_s/1.png" id="98"]
[ext_resource type="Texture2D" uid="uid://cj6d0v8r540fx" path="res://Character/valla/valla_idle_s/2.png" id="99"]
[ext_resource type="Texture2D" uid="uid://cjscknds4lcqh" path="res://Character/valla/valla_idle_s/3.png" id="100"]
[ext_resource type="Texture2D" uid="uid://ejqwraqyi5hg" path="res://Character/valla/valla_idle_s/4.png" id="101"]
[ext_resource type="Texture2D" uid="uid://ckutgy58tom3m" path="res://Character/valla/valla_death/02.png" id="102"]
[ext_resource type="Texture2D" uid="uid://d0plkq5qy0ysa" path="res://Character/valla/valla_death/08.png" id="104"]
[ext_resource type="Texture2D" uid="uid://wautgh2vf88d" path="res://Character/valla/valla_death/15.png" id="105"]
[ext_resource type="Texture2D" uid="uid://7ep57xxv3sqy" path="res://Character/valla/valla_death/19.png" id="107"]
[ext_resource type="Texture2D" uid="uid://dsi512oxe5bel" path="res://Character/valla/valla_death/12.png" id="108"]
[ext_resource type="Texture2D" uid="uid://cg0a81ajlnlys" path="res://Character/valla/valla_death/01.png" id="109"]
[ext_resource type="Texture2D" uid="uid://orqrs5ygwlnj" path="res://Character/valla/valla_death/17.png" id="110"]
[ext_resource type="Texture2D" uid="uid://m2r6hje4c8l8" path="res://Character/valla/valla_death/03.png" id="111"]
[ext_resource type="Texture2D" uid="uid://dwq2tn1ep8qmx" path="res://Character/valla/valla_death/10.png" id="112"]
[ext_resource type="Texture2D" uid="uid://cv2p0tmc536jj" path="res://Character/valla/valla_death/09.png" id="113"]
[ext_resource type="Texture2D" uid="uid://bmwalahwtger2" path="res://Character/valla/valla_death/16.png" id="114"]
[ext_resource type="Texture2D" uid="uid://dcgto2qpjx6l8" path="res://Character/valla/valla_death/07.png" id="115"]
[ext_resource type="Texture2D" uid="uid://dm40dkvlwklqo" path="res://Character/valla/valla_death/18.png" id="116"]
[ext_resource type="Texture2D" uid="uid://dy5rt26c0kt5m" path="res://Character/valla/valla_death/06.png" id="117"]
[ext_resource type="Texture2D" uid="uid://bunhojquu08l3" path="res://Character/valla/valla_death/05.png" id="118"]
[ext_resource type="Texture2D" uid="uid://dtv0wmlag728k" path="res://Character/valla/valla_death/14.png" id="119"]
[ext_resource type="Texture2D" uid="uid://71r8th0414ov" path="res://Character/valla/valla_death/11.png" id="121"]
[ext_resource type="Texture2D" uid="uid://i8dkj78yyi4w" path="res://Character/valla/valla_death/20.png" id="122"]
[ext_resource type="Texture2D" uid="uid://6tiinrum6q26" path="res://Character/valla/valla_death/04.png" id="123"]
[ext_resource type="Texture2D" uid="uid://dmnqeceksimq1" path="res://Character/valla/valla_death/13.png" id="125"]

[sub_resource type="SpriteFrames" id="1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2")
}, {
"duration": 1.0,
"texture": ExtResource("6")
}, {
"duration": 1.0,
"texture": ExtResource("4")
}, {
"duration": 1.0,
"texture": ExtResource("5")
}, {
"duration": 1.0,
"texture": ExtResource("3")
}, {
"duration": 1.0,
"texture": ExtResource("8")
}, {
"duration": 1.0,
"texture": ExtResource("7")
}, {
"duration": 1.0,
"texture": ExtResource("1")
}],
"loop": true,
"name": &"Attack_n",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("24")
}, {
"duration": 1.0,
"texture": ExtResource("21")
}, {
"duration": 1.0,
"texture": ExtResource("22")
}, {
"duration": 1.0,
"texture": ExtResource("23")
}, {
"duration": 1.0,
"texture": ExtResource("65")
}, {
"duration": 1.0,
"texture": ExtResource("64")
}, {
"duration": 1.0,
"texture": ExtResource("54")
}, {
"duration": 1.0,
"texture": ExtResource("53")
}],
"loop": true,
"name": &"Attack_s",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("109")
}, {
"duration": 1.0,
"texture": ExtResource("102")
}, {
"duration": 1.0,
"texture": ExtResource("111")
}, {
"duration": 1.0,
"texture": ExtResource("123")
}, {
"duration": 1.0,
"texture": ExtResource("118")
}, {
"duration": 1.0,
"texture": ExtResource("117")
}, {
"duration": 1.0,
"texture": ExtResource("115")
}, {
"duration": 1.0,
"texture": ExtResource("104")
}, {
"duration": 1.0,
"texture": ExtResource("113")
}, {
"duration": 1.0,
"texture": ExtResource("112")
}, {
"duration": 1.0,
"texture": ExtResource("121")
}, {
"duration": 1.0,
"texture": ExtResource("108")
}, {
"duration": 1.0,
"texture": ExtResource("125")
}, {
"duration": 1.0,
"texture": ExtResource("119")
}, {
"duration": 1.0,
"texture": ExtResource("105")
}, {
"duration": 1.0,
"texture": ExtResource("114")
}, {
"duration": 1.0,
"texture": ExtResource("110")
}, {
"duration": 1.0,
"texture": ExtResource("116")
}, {
"duration": 1.0,
"texture": ExtResource("107")
}, {
"duration": 1.0,
"texture": ExtResource("122")
}],
"loop": true,
"name": &"Death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("88")
}, {
"duration": 1.0,
"texture": ExtResource("71")
}, {
"duration": 1.0,
"texture": ExtResource("46")
}, {
"duration": 1.0,
"texture": ExtResource("58")
}, {
"duration": 1.0,
"texture": ExtResource("81")
}, {
"duration": 1.0,
"texture": ExtResource("79")
}, {
"duration": 1.0,
"texture": ExtResource("48")
}, {
"duration": 1.0,
"texture": ExtResource("25")
}],
"loop": true,
"name": &"Go_n",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("42")
}, {
"duration": 1.0,
"texture": ExtResource("63")
}, {
"duration": 1.0,
"texture": ExtResource("26")
}, {
"duration": 1.0,
"texture": ExtResource("37")
}, {
"duration": 1.0,
"texture": ExtResource("45")
}, {
"duration": 1.0,
"texture": ExtResource("32")
}, {
"duration": 1.0,
"texture": ExtResource("34")
}, {
"duration": 1.0,
"texture": ExtResource("82")
}],
"loop": true,
"name": &"Go_s",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("95")
}, {
"duration": 1.0,
"texture": ExtResource("96")
}, {
"duration": 1.0,
"texture": ExtResource("97")
}, {
"duration": 1.0,
"texture": ExtResource("89")
}, {
"duration": 1.0,
"texture": ExtResource("90")
}],
"loop": true,
"name": &"Idle_n",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("98")
}, {
"duration": 1.0,
"texture": ExtResource("99")
}, {
"duration": 1.0,
"texture": ExtResource("100")
}, {
"duration": 1.0,
"texture": ExtResource("101")
}, {
"duration": 1.0,
"texture": ExtResource("9")
}],
"loop": true,
"name": &"Idle_s",
"speed": 5.0
}]

[node name="Player" type="CharacterBody2D" groups=["player"]]
script = ExtResource("10")

[node name="AnimatedSprite" type="AnimatedSprite2D" parent="."]
position = Vector2(-7.88202, -40)
scale = Vector2(1.75, 1.75)
sprite_frames = SubResource("1")
animation = &"Attack_n"

[node name="ArrowSpawn" type="Node2D" parent="AnimatedSprite"]
position = Vector2(-4.19911, 7.80875)

[node name="AttackTimer" type="Timer" parent="."]
one_shot = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2(0.117981, 0.117985)
scale = Vector2(1.75, 1.75)
polygon = PackedVector2Array(-22.9246, -0.0674199, -16.7306, 9.14286, -0.0674177, 13.6469, 16.3724, 9.14286, 22.7897, -0.0674199, 16.305, -9.14285, -0.0674177, -13.7817, -16.5284, -9.14285)

[node name="LiveOverlay" parent="." instance=ExtResource("11")]
position = Vector2(40, -80)

[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
